fix: risolti errori SonarQube backend
- Constructor injection in tutti i service e controller (S6813)
- .collect(Collectors.toList()) → .toList() in tutti i service e DTO (S6204)
- Eccezioni custom: ResourceNotFoundException, ForbiddenException, BadRequestException, FileUploadException (S112)
- GlobalExceptionHandler per gestione centralizzata errori
- System.out/err/printStackTrace → SLF4J logger (S106)
- Costanti ErrorMessages per stringhe duplicate (S1192)
- Rinominate classi underscore → CamelCase (S116/S101)
- Rimossi import inutilizzati, parametri inutilizzati, codice commentato (S1128/S1172/S125)
- Rimossi modificatori public da test JUnit5 (S5786)
- Ridotta cognitive complexity in ReportService (S3776)
- Password admin esternalizzata in env var ADMIN_PASSWORD (S6437)
- Dockerfile: aggiunto utente non-root (S6471)
- Password DB esternalizzata in env var DB_PASSWORD