@@ -1,57 +1,56 @@
 package com.bugboard25.service;
 
-import com.bugboard25.dto.AutoreCommentoDTO;
 import com.bugboard25.dto.CommentiCreateRequestDTO;
 import com.bugboard25.dto.CommentoCompletoDTO;
-import com.bugboard25.dto.ProgettiDTO;
 import com.bugboard25.dto.UtentiDTO;
 import com.bugboard25.dto.NotificheMenzioneCreateRequestDTO;
 import com.bugboard25.entity.Commenti;
 import com.bugboard25.entity.Issue;
-import com.bugboard25.entity.Progetti;
-import com.bugboard25.entity.Notifiche;
 import com.bugboard25.entity.Utenti;
+import com.bugboard25.entity.enumerations.tipo_ruolo;
+import com.bugboard25.exception.ErrorMessages;
+import com.bugboard25.exception.ResourceNotFoundException;
 import com.bugboard25.repository.CommentiRepository;
 import com.bugboard25.repository.IssueRepository;
 import com.bugboard25.repository.UtentiRepository;
-import com.bugboard25.entity.enumerations.tipo_ruolo;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import com.bugboard25.service.UtentiService;
-import com.bugboard25.service.SseService;
-
 
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Service
 public class CommentiService {
-    @Autowired
-    private CommentiRepository commentiRepository;
-    @Autowired
-    private IssueRepository issueRepository;
-    @Autowired
-    private UtentiRepository utentiRepository;
-    @Autowired
-    private NotificheService notificheService;
-    @Autowired
-    private ProgettiService progettiService;
-    @Autowired
-    private UtentiService utentiService;
+
+    private final CommentiRepository commentiRepository;
+    private final IssueRepository issueRepository;
+    private final UtentiRepository utentiRepository;
+    private final NotificheService notificheService;
+    private final UtentiService utentiService;
+    private final SseService sseService;
+
+    public CommentiService(CommentiRepository commentiRepository, IssueRepository issueRepository,
+                           UtentiRepository utentiRepository, NotificheService notificheService,
+                           UtentiService utentiService, SseService sseService) {
+        this.commentiRepository = commentiRepository;
+        this.issueRepository = issueRepository;
+        this.utentiRepository = utentiRepository;
+        this.notificheService = notificheService;
+        this.utentiService = utentiService;
+        this.sseService = sseService;
+    }
 
     public List<CommentoCompletoDTO> getAllByIssue(int issueId) {
         Issue issue = issueRepository.findById(issueId)
-                .orElseThrow(() -> new RuntimeException("Invalid issue"));
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.ISSUE_NON_TROVATA));
 
         List<Commenti> commenti = commentiRepository.findAllByIssue(issue);
 
         return commenti.stream()
-                .map(commento -> new CommentoCompletoDTO(commento))
-                .collect(Collectors.toList());
+                .map(CommentoCompletoDTO::new)
+                .toList();
     }
 
     public List<String> estraiMenzioni(String testoDelCommento) {
@@ -70,13 +69,12 @@ public class CommentiService {
         return emailMenzionati;
     }
 
-
     public CommentoCompletoDTO creaCommento(CommentiCreateRequestDTO dto) {
         Issue issue = issueRepository.findById(dto.getIdIssue())
-                .orElseThrow(() -> new RuntimeException("Issue non trovata"));
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.ISSUE_NON_TROVATA));
 
         Utenti autore = utentiRepository.findById(dto.getAutore())
-                .orElseThrow(() -> new RuntimeException("Autore non trovata"));
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.UTENTE_NON_TROVATO));
 
         Commenti commenti = new Commenti();
         commenti.setTesto(dto.getTesto());
@@ -96,23 +94,20 @@ public class CommentiService {
 
             notificheService.creaNotificaMenzione(dtoMenzione);
         }
-        
+
         broadcastIssueUpdate(issue.getIdProgetto().getId());
 
         return new CommentoCompletoDTO(commenti);
     }
-    
-    @Autowired
-    private SseService sseService;
-    
+
     private void broadcastIssueUpdate(int projectId) {
         List<UtentiDTO> members = utentiService.getUtentiByProgettoId(projectId);
         for (UtentiDTO member : members) {
-            sseService.sendEvent(member.getEmail(), "issue-update", "Issue updated in project " + projectId);
+            sseService.sendEvent(member.getEmail(), ErrorMessages.ISSUE_UPDATE, "Issue updated in project " + projectId);
         }
         List<UtentiDTO> amministratori = utentiService.getUtentiByRuolo(tipo_ruolo.AMMINISTRATORE);
         for (UtentiDTO amministratore : amministratori) {
-            sseService.sendUpdateSignal(amministratore.getEmail(), "issue-update");
+            sseService.sendUpdateSignal(amministratore.getEmail(), ErrorMessages.ISSUE_UPDATE);
         }
     }
 }
