@@ -5,60 +5,62 @@ import com.bugboard25.dto.EtichettaDTO;
 import com.bugboard25.entity.Etichette;
 import com.bugboard25.entity.Issue;
 import com.bugboard25.entity.Progetti;
+import com.bugboard25.exception.ErrorMessages;
+import com.bugboard25.exception.ResourceNotFoundException;
 import com.bugboard25.repository.EtichetteRepository;
 import com.bugboard25.repository.IssueRepository;
 import com.bugboard25.repository.ProgettiRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class EtichetteService {
 
-    @Autowired
-    private EtichetteRepository etichetteRepository;
+    private final EtichetteRepository etichetteRepository;
+    private final ProgettiRepository progettiRepository;
+    private final IssueRepository issueRepository;
 
-    @Autowired
-    private ProgettiRepository progettiRepository;
+    public EtichetteService(EtichetteRepository etichetteRepository, ProgettiRepository progettiRepository,
+                            IssueRepository issueRepository) {
+        this.etichetteRepository = etichetteRepository;
+        this.progettiRepository = progettiRepository;
+        this.issueRepository = issueRepository;
+    }
 
-    @Autowired
-    private IssueRepository issueRepository;
-
-    public List<EtichettaDTO> getAllEtichette(){
+    public List<EtichettaDTO> getAllEtichette() {
         return etichetteRepository.findAll()
                 .stream()
                 .map(EtichettaDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<EtichettaDTO> getEtichetteByNome(String etichetta){
+    public List<EtichettaDTO> getEtichetteByNome(String etichetta) {
         return etichetteRepository.findByNome(etichetta)
                 .stream()
                 .map(EtichettaDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<EtichettaDTO> getEtichetteByProgetti(int progetto) {
         return etichetteRepository.findByProgettoIdQuery(progetto)
                 .stream()
                 .map(EtichettaDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<EtichettaDTO> getEtichetteByIssue(int idIssue){
+    public List<EtichettaDTO> getEtichetteByIssue(int idIssue) {
         Issue issue = issueRepository.findById(idIssue)
-                .orElseThrow(() -> new RuntimeException("Id issue not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.ISSUE_NON_TROVATA));
         return etichetteRepository.findEtichetteByIssue(issue)
                 .stream()
                 .map(EtichettaDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public EtichettaDTO creaEtichetta(EtichettaCreateRequestDTO requestDTO){
+    public EtichettaDTO creaEtichetta(EtichettaCreateRequestDTO requestDTO) {
         Progetti progetto = progettiRepository.findById(requestDTO.getId())
-                .orElseThrow(() -> new RuntimeException("Progetto non trovato"));
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.PROGETTO_NON_TROVATO));
         Etichette etichetta = new Etichette();
 
         etichetta.setId_progetto(progetto);
@@ -70,9 +72,9 @@ public class EtichetteService {
     }
 
     public Etichette findOrCreate(String nomeEtichetta, Progetti progetto) {
-        final String COLORE_DEFAULT = "#CCCCCC";
+        final String coloreDefault = "#CCCCCC";
         List<Etichette> etichetteTrovate = etichetteRepository.findByNome(nomeEtichetta);
-        
+
         for (Etichette et : etichetteTrovate) {
             if (et.getId_progetto().getId() == progetto.getId()) {
                 return et;
@@ -81,7 +83,7 @@ public class EtichetteService {
 
         Etichette nuovaEtichetta = new Etichette();
         nuovaEtichetta.setNome(nomeEtichetta);
-        nuovaEtichetta.setColore(COLORE_DEFAULT);
+        nuovaEtichetta.setColore(coloreDefault);
         nuovaEtichetta.setId_progetto(progetto);
 
         return etichetteRepository.save(nuovaEtichetta);
