@@ -2,104 +2,101 @@ package com.bugboard25.service;
 
 import com.bugboard25.dto.ProgettiDTO;
 import com.bugboard25.dto.UtentiDTO;
-import com.bugboard25.service.UtentiService;
 import com.bugboard25.dto.ProgettoCreateRequestDTO;
 import com.bugboard25.entity.Progetti;
-import com.bugboard25.entity.Progetto_Membri;
+import com.bugboard25.entity.ProgettoMembri;
 import com.bugboard25.entity.Utenti;
-import com.bugboard25.entity.ComposedPrimaryKeys.Progetto_MembriPrimaryKey;
-import com.bugboard25.repository.ProgettiRepository;
-import com.bugboard25.repository.Progetto_MembriRepository;
-import com.bugboard25.repository.UtentiRepository;
 import com.bugboard25.entity.enumerations.tipo_ruolo;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.bugboard25.exception.ErrorMessages;
+import com.bugboard25.exception.ResourceNotFoundException;
+import com.bugboard25.repository.ProgettiRepository;
+import com.bugboard25.repository.ProgettoMembriRepository;
+import com.bugboard25.repository.UtentiRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
-import com.bugboard25.service.SseService;
 
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ProgettiService {
-    @Autowired
-    private ProgettiRepository progettiRepository;
 
-    @Autowired
-    private UtentiRepository utentiRepository;
+    private static final Logger logger = LoggerFactory.getLogger(ProgettiService.class);
 
-    @Autowired
-    private Progetto_MembriRepository progetto_MembriRepository;
+    private final ProgettiRepository progettiRepository;
+    private final UtentiRepository utentiRepository;
+    private final ProgettoMembriRepository progettoMembriRepository;
+    private final UtentiService utentiService;
+    private final ProgettoMembriService progettoMembriService;
+    private final SseService sseService;
 
-    @Autowired
-    private UtentiService utentiService;
-
-    @Autowired
-    private Progetto_MembriService progetto_MembriService;
+    public ProgettiService(ProgettiRepository progettiRepository, UtentiRepository utentiRepository,
+                           ProgettoMembriRepository progettoMembriRepository, UtentiService utentiService,
+                           ProgettoMembriService progettoMembriService, SseService sseService) {
+        this.progettiRepository = progettiRepository;
+        this.utentiRepository = utentiRepository;
+        this.progettoMembriRepository = progettoMembriRepository;
+        this.utentiService = utentiService;
+        this.progettoMembriService = progettoMembriService;
+        this.sseService = sseService;
+    }
 
     public List<ProgettiDTO> getProgettiByMembro(String utente) {
         return progettiRepository.findProgettiByMembroEmail(utente)
                 .stream()
                 .map(ProgettiDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<ProgettiDTO> getProgetti(){
+    public List<ProgettiDTO> getProgetti() {
         return progettiRepository.findAll()
                 .stream()
                 .map(ProgettiDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ProgettiDTO getProgettiById(int id) {
-        Optional<Progetti> progetti = progettiRepository.findById(id);
-        if (progetti.isEmpty()){
-            throw new RuntimeException("Progetto non trovato");
-        }
-
-        return new ProgettiDTO(progetti.get());
+        Progetti progetto = progettiRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.PROGETTO_NON_TROVATO));
+        return new ProgettiDTO(progetto);
     }
 
     public List<ProgettiDTO> getProgettiByNome(String nome) {
-        if (progettiRepository.existsByNome(nome)){
+        if (progettiRepository.existsByNome(nome)) {
             return progettiRepository.findProgettiByNome(nome)
                     .stream()
                     .map(ProgettiDTO::new)
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
-            throw new RuntimeException("Progetto non trovato");
+            throw new ResourceNotFoundException(ErrorMessages.PROGETTO_NON_TROVATO);
         }
     }
 
-    @Autowired
-    private SseService sseService;
-
     private void notifyProjectMembers(int projectId) {
         try {
-            // Find members to notify
             Optional<Progetti> progettoOpt = progettiRepository.findById(projectId);
             if (progettoOpt.isPresent()) {
-                 List<Progetto_Membri> membri = progetto_MembriRepository.findByProgetto(progettoOpt.get());
-                 for (Progetto_Membri membro : membri) {
-                     sseService.sendUpdateSignal(membro.getUtente().getEmail(), "project-update");
+                 List<ProgettoMembri> membri = progettoMembriRepository.findByProgetto(progettoOpt.get());
+                 for (ProgettoMembri membro : membri) {
+                     sseService.sendUpdateSignal(membro.getUtente().getEmail(), ErrorMessages.PROJECT_UPDATE);
                  }
             }
             List<UtentiDTO> amministratori = utentiService.getUtentiByRuolo(tipo_ruolo.AMMINISTRATORE);
             for (UtentiDTO amministratore : amministratori) {
-                sseService.sendUpdateSignal(amministratore.getEmail(), "project-update");
+                sseService.sendUpdateSignal(amministratore.getEmail(), ErrorMessages.PROJECT_UPDATE);
             }
         } catch (Exception e) {
-            System.err.println("Failed to broadcast project update: " + e.getMessage());
+            logger.error("Failed to broadcast project update: {}", e.getMessage());
         }
     }
 
-    public ProgettiDTO creaProgetto(ProgettoCreateRequestDTO requestDTO){
+    public ProgettiDTO creaProgetto(ProgettoCreateRequestDTO requestDTO) {
         Utenti creatore = utentiRepository.findById(requestDTO.getCreatore())
-                .orElseThrow(() -> new RuntimeException("Utente non trovato"));
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.UTENTE_NON_TROVATO));
 
         Progetti progetto = new Progetti();
-
         progetto.setNome(requestDTO.getNome());
         progetto.setDescrizione(requestDTO.getDescrizione());
         progetto.setData_creazione(new Date());
@@ -107,19 +104,15 @@ public class ProgettiService {
 
         progetto = progettiRepository.save(progetto);
 
-        // Add creator as member using service (handles notification)
-        progetto_MembriService.associaUtente(progetto, creatore);
-
-        // Notify isn't strictly necessary for creator (API response) but good for consistency 
-        // if we have multiple tabs or lists open.
-        notifyProjectMembers(progetto.getId()); 
+        progettoMembriService.associaUtente(progetto, creatore);
+        notifyProjectMembers(progetto.getId());
 
         return new ProgettiDTO(progetto);
     }
 
-    public ProgettiDTO updateProgettoById(int id, ProgettoCreateRequestDTO requestDTO){
+    public ProgettiDTO updateProgettoById(int id, ProgettoCreateRequestDTO requestDTO) {
         Progetti progetto = progettiRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Progetto non trovato con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.PROGETTO_NON_TROVATO + " con ID: " + id));
 
         progetto.setNome(requestDTO.getNome());
         progetto.setDescrizione(requestDTO.getDescrizione());
@@ -129,12 +122,11 @@ public class ProgettiService {
         return new ProgettiDTO(progetto);
     }
 
-    public void deleteProgettoById(int id){
-        // Notify before deleting, otherwise we can't find members
+    public void deleteProgettoById(int id) {
         notifyProjectMembers(id);
-        
+
         Progetti progettoDaEliminare = progettiRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Progetto non trovato"));
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.PROGETTO_NON_TROVATO));
         progettiRepository.delete(progettoDaEliminare);
     }
 }
